infra/aws/network/vpc.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: Network infrastructure for Multi-Tenant Barber SaaS development environment

Parameters:
  ProjectName:
    Type: String
    Default: barber-saas

  Environment:
    Type: String
    Default: dev

Resources:

  BarberVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-vpc"

        - Key: Project
          Value: !Ref ProjectName

        - Key: Environment
          Value: !Ref Environment


  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-igw"


  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref BarberVpc
      InternetGatewayId: !Ref InternetGateway


  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref BarberVpc
      AvailabilityZone: !Select
        - 0
        - !GetAZs ""
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-public-1"

        - Key: kubernetes.io/role/elb
          Value: "1"


  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref BarberVpc
      AvailabilityZone: !Select
        - 1
        - !GetAZs ""
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-public-2"

        - Key: kubernetes.io/role/elb
          Value: "1"


  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref BarberVpc
      AvailabilityZone: !Select
        - 0
        - !GetAZs ""
      CidrBlock: 10.0.10.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-private-1"

        - Key: kubernetes.io/role/internal-elb
          Value: "1"


  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref BarberVpc
      AvailabilityZone: !Select
        - 1
        - !GetAZs ""
      CidrBlock: 10.0.11.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-private-2"

        - Key: kubernetes.io/role/internal-elb
          Value: "1"


  NatElasticIp:
    Type: AWS::EC2::EIP
    DependsOn:
      - InternetGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-nat-eip"


  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatElasticIp.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-nat"


  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref BarberVpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-public-rt"


  PublicDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn:
      - InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway


  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable


  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable


  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref BarberVpc
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-private-rt"


  PrivateDefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway


  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable


  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable


Outputs:

  VpcId:
    Description: Barber SaaS VPC ID
    Value: !Ref BarberVpc

  PublicSubnet1Id:
    Description: Public subnet in first Availability Zone
    Value: !Ref PublicSubnet1

  PublicSubnet2Id:
    Description: Public subnet in second Availability Zone
    Value: !Ref PublicSubnet2

  PrivateSubnet1Id:
    Description: Private subnet in first Availability Zone
    Value: !Ref PrivateSubnet1

  PrivateSubnet2Id:
    Description: Private subnet in second Availability Zone
    Value: !Ref PrivateSubnet2

  NatGatewayId:
    Description: Development NAT Gateway
    Value: !Ref NatGateway
